--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@
 /sol?/
 /myapi.key
 /.suf
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
