--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "x86.h": "c"
-    }
+        "x86.h": "c",
+        "kdebug.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
