--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "x86.h": "c",
-        "kdebug.h": "c"
+        "kdebug.h": "c",
+        "monitor.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
